--- a/Lab1/style.css
+++ b/Lab1/style.css
@@ -1,8 +1,9 @@
 body{
     margin: 0;
     padding: 0;
-    min-height: 100vh;
-    min-width: 100vw;
+    /* min-height: 100vh; */
+    /* min-width: 450px; */
+    /* overflow: hidden; */
 }
 
 .container{
@@ -10,6 +11,7 @@ body{
 }
 
 .item{
+    max-width: 100vw;
     width: 100%;
     height: 100%;
     text-align: center;
@@ -36,9 +38,21 @@ body{
 
 .container .item:nth-child(5){
     background-color: #ecf1df;
+    font-size: 2.5vw;
 }
 
-@media screen and (max-width: 480px) {
+picture{
+    height: 100%;
+    max-width: 100vw;
+    display: flex;
+    justify-content: center;
+}
+
+img{
+    max-height: 100%;
+}
+
+@media screen and (max-width: 479px) {
     .item:nth-child(4){
         display: none;
     }
@@ -53,7 +67,7 @@ body{
     }
 }
 
-@media screen and (min-width: 480px) and (max-width: 640px) {
+@media screen and (min-width: 480px) and (max-width: 639px) {
     .container{
         grid-template-rows: calc(100vh /4 ) calc(100vh /4 ) calc(100vh /4 ) calc(100vh /4 );
         grid-template-columns: 45% 55%;
